modyfi code to adapt java 13